--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Checkout CoNote SQL files
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.REPOSITORY_TOKEN }}
+          repository: phith0n/conote2
+          ref: v${{ inputs.version }}
+          path: ./docker/sql
+          sparse-checkout: |
+            provider/db/migrations
+
       - name: Download releases
         uses: robinraju/release-downloader@v1
         with:
+          token: ${{ secrets.REPOSITORY_TOKEN }}
           repository: phith0n/conote2
           tag: v${{ inputs.version }}
-          out-file-path: ./releases
-          token: ${{ secrets.REPOSITORY_TOKEN }}
+          out-file-path: ./docker
           fileName: 'conote2_*.tar.gz'
 
       - name: Set up QEMU
@@ -39,7 +49,7 @@ jobs:
       - name: Build image and push to Docker Hub
         uses: docker/build-push-action@v5
         with:
-          context: ./releases
+          context: ./docker
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
