--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ LABEL maintainer="phith0n <root@leavesongs.com>"
 
 RUN set -ex \
     && apt-get update \
-    && apt-get install -y --no-install-recommends wget ca-certificates wait-for-it postgresql-client \
+    && apt-get install -y --no-install-recommends wget curl ca-certificates wait-for-it postgresql-client \
     && curl -sSf https://atlasgo.sh | sh \
     && mkdir -p /opt/conote2/sql
 
