--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
           cd docker
           for tarfile in conote2_*.tar.gz
           do
-            tar --strip-components=1 -xzf "$tarfile"
+            tar -xzf "$tarfile"
             suffix=$(echo "$tarfile" | sed -n 's/conote2_\(.*\)\.tar\.gz/\1/p')
             mv conote2 conote2_$suffix
             rm "$tarfile" README.md
