--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@docusaurus/preset-classic": "^2.4.1",
     "@material-ui/core": "^4.11.3",
     "@mdx-js/react": "^1.6.21",
+    "autoprefixer": "^10.4.20",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "postcss": "^8.4.47",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-date-picker": "^8.1.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^3.4.13"
   },
   "browserslist": {
     "production": [
@@ -44,9 +47,9 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
     "cross-env": "^7.0.3",
-    "typescript": "^4.2.3",
     "docusaurus-plugin-sass": "^0.2.5",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "typescript": "^4.2.3"
   },
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
