--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "write-heading-ids": "cross-env NODE_OPTIONS=--openssl-legacy-provider docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
-    "@docusaurus/preset-classic": "^2.4.1",
+    "@docusaurus/core": "^3.5.2",
+    "@docusaurus/preset-classic": "^3.5.2",
     "@material-ui/core": "^4.11.3",
-    "@mdx-js/react": "^1.6.21",
+    "@mdx-js/react": "^3.0.1",
+    "prism-react-renderer": "^2.1.0",
     "autoprefixer": "^10.4.20",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "postcss": "^8.4.47",
-    "react": "^17.0.1",
+    "react": "^18.2.0",
     "react-chartjs-2": "^2.11.1",
     "react-date-picker": "^8.1.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.13"
   },
   "browserslist": {
@@ -41,13 +42,13 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.0.0-alpha.71",
+    "@docusaurus/module-type-aliases": "^3.5.2",
+    "@docusaurus/types": "^3.5.2",
     "@tsconfig/docusaurus": "^1.0.2",
     "@types/react": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
     "cross-env": "^7.0.3",
-    "docusaurus-plugin-sass": "^0.2.5",
     "sass": "^1.77.8",
     "typescript": "^4.2.3"
   },
