--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
     "cross-env": "^7.0.3",
-    "sass": "^1.77.8",
     "typescript": "^4.2.3"
   },
+  "engines": {
+    "node": ">=18.0"
+   },
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
