--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,6 +11,7 @@ RUN set -ex \
 ARG TARGETARCH
 ARG VERSION
 COPY ./conote2_${VERSION}_linux_${TARGETARCH} /opt/conote2/conote2
+COPY ./geoip2.mmdb /opt/conote2/geoip2.mmdb
 COPY ./repo/providers/db/migrations/* /opt/conote2/migrations/
 COPY ./repo/default-config.yaml /opt/conote2/default-config.yaml
 COPY ./repo/docker-entrypoint.sh /opt/conote2/docker-entrypoint.sh
